--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
     <link href="lightbox.css" rel="stylesheet" />
+    <link rel="stylesheet" href="parsley.css">
     <title>HomeDecor</title>
 </head>
 
@@ -592,20 +593,20 @@
                 </p>
             </div>
             <div class="contact__form-container">
-                <form class="contact__form row g-3 py-5">
+                <form class="contact__form row g-3 py-5" data-parsley-validate>
                     <div class="col-md-6">
-                        <input type="text" class="form-control contact__input" placeholder="Name">
+                        <input type="text" class="form-control contact__input" placeholder="Name" required data-parsley-required-message="Please enter your name">
                     </div>
                     <div class="col-md-6">
-                        <input type="email" class="form-control contact__input" placeholder="Email">
+                        <input type="email" class="form-control contact__input" placeholder="Email" required data-parsley-type="email" data-parsley-required-message="Please enter a valid email address">
                     </div>
                     <div class="col-12">
-                        <input type="number" class="form-control contact__input" placeholder="Phone number">
+                        <input type="text" class="form-control contact__input" placeholder="Phone number" required data-parsley-type="digits" data-parsley-required-message="Please enter your phone number">
                     </div>
                     <div class="col-12">
                         <textarea class="form-control contact__input" placeholder="Enter your message"
-                            rows="3"></textarea>
-                    </div>
+                            rows="3" required data-parsley-required-message="Please enter your message" data-parsley-minlength="16"></textarea>
+                    </div> 
                     <div class="col-12">
                         <button type="submit" class="btn w-100 contact__submit-btn">Submit</button>
                     </div>
@@ -679,6 +680,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <script src="lightbox-plus-jquery.js"></script>
+    <script src="parsley.min.js"></script>
 
     <script>
         const swiper = new Swiper('.swiper', {
