--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <link href="lightbox.css" rel="stylesheet" />
-    <link rel="stylesheet" href="parsley.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link href="assets/css/lightbox.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/parsley.css">
     <title>HomeDecor</title>
 </head>
 
@@ -86,7 +86,7 @@
                     
                   </div>
                   <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="imgs/hero.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
+                    <img src="assets/imgs/hero.png" class="d-block mx-lg-auto img-fluid" alt="hero-img" width="700" height="500" loading="lazy">
                   </div>
                 </div>
               </div>
@@ -108,7 +108,7 @@
                         <!-- Slides -->
                         <div class="swiper-slide products__slide">
                             <div class="product-card">
-                                <img src="imgs/product-1.jpg" class="card-img-top product-card__image rounded-top"
+                                <img src="assets/imgs/product-1.jpg" class="card-img-top product-card__image rounded-top"
                                     alt="...">
                                 <div class="product-card__body rounded-bottom p-4 text-center">
                                     <h5 class="product-card__title">Finnala</h5>
@@ -118,7 +118,7 @@
                         </div>
                         <div class="swiper-slide products__slide">
                             <div class="product-card">
-                                <img src="imgs/product-2.jpg" class="card-img-top product-card__image rounded-top"
+                                <img src="assets/imgs/product-2.jpg" class="card-img-top product-card__image rounded-top"
                                     alt="...">
                                 <div class="product-card__body rounded-bottom p-4 text-center">
                                     <h5 class="product-card__title">Kivik</h5>
@@ -128,7 +128,7 @@
                         </div>
                         <div class="swiper-slide products__slide">
                             <div class="product-card">
-                                <img src="imgs/product-13.jpg" class="card-img-top product-card__image rounded-top"
+                                <img src="assets/imgs/product-13.jpg" class="card-img-top product-card__image rounded-top"
                                     alt="...">
                                 <div class="product-card__body rounded-bottom p-4 text-center">
                                     <h5 class="product-card__title">Kimberly</h5>
@@ -138,7 +138,7 @@
                         </div>
                         <div class="swiper-slide products__slide">
                             <div class="product-card">
-                                <img src="imgs/product-18.jpg" class="card-img-top product-card__image rounded-top"
+                                <img src="assets/imgs/product-18.jpg" class="card-img-top product-card__image rounded-top"
                                     alt="...">
                                 <div class="product-card__body rounded-bottom p-4 text-center">
                                     <h5 class="product-card__title">Charette</h5>
@@ -148,7 +148,7 @@
                         </div>
                         <div class="swiper-slide products__slide">
                             <div class="product-card">
-                                <img src="imgs/product-31.jpg" class="card-img-top product-card__image rounded-top"
+                                <img src="assets/imgs/product-31.jpg" class="card-img-top product-card__image rounded-top"
                                     alt="...">
                                 <div class="product-card__body rounded-bottom p-4 text-center">
                                     <h5 class="product-card__title">Joliette</h5>
@@ -156,10 +156,6 @@
                                 </div>
                             </div>
                         </div>
-
-
-
-
                     </div>
 
                     <div class="swiper-pagination"></div>
@@ -212,7 +208,7 @@
             <div class="about__details py-5">
                 <div class="row m-0">
                     <div class="about__image-wrapper col-12 col-lg-5 d-none d-lg-block p-0">
-                        <img src="imgs/what-we-do.jpg" alt="" class="about__image w-100">
+                        <img src="assets/imgs/what-we-do.jpg" alt="about-us-img" class="about__image w-100">
                     </div>
                     <div class="about__services col-12 col-lg-7 position-relative p-5">
                         <div id="card-innovation" class="about__service-card mb-3 mb-lg-0">
@@ -364,9 +360,9 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.js"></script>
-    <script src="lightbox-plus-jquery.js"></script>
-    <script src="parsley.min.js"></script>
-    <script src="main.js"></script>
+    <script src="assets/js/lightbox-plus-jquery.js"></script>
+    <script src="assets/js/parsley.min.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
